--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
 </head>
 
 <body>
-  <header class="page-header">
+  <header class="page-header center">
     <div class="class1 container">
-    <div class="logo-container">
-      <a class="header-logo-blue" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
-    </div>
-    <div class="class6">
-    <nav>
-      <div class="header-links-container">
-        <a class="header-links" href="agencja.html"><span>Agencja</span></a>
-        <a class="header-links" href="./portfolio.html"><span>Portfolio</span></a>
-        <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
+      <div class="logo-container">
+        <a class="header-logo-blue" href="./index.html"><span>Web</span><span
+            class="header-logo-right">Studio</span></a>
       </div>
-    </nav>
-    <div class="header-links-contact-container">
-      <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-      <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
-    </div>
-    </div>
+      <div class="class6">
+        <nav>
+          <div class="header-links-container">
+            <a class="header-links" href="agencja.html"><span>Agencja</span></a>
+            <a class="header-links" href="./portfolio.html"><span>Portfolio</span></a>
+            <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
+          </div>
+        </nav>
+        <div class="header-links-contact-container">
+          <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
+          <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
+        </div>
+      </div>
     </div>
   </header>
   <main>
@@ -42,126 +43,127 @@
         <button class="main-button" type="button">Zamów usługe</button>
       </div>
     </section>
-    <section class="container">
-      <div class="class3">
-      <div class="class2">
-        <ul class="main-section">
-          <li>
-            <h4 class="main-section-headings">LOREM IPSUM</h4>
-            <p class="main-section-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h4 class="main-section-headings">LOREM IPSUM</h4>
-            <p class="main-section-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h4 class="main-section-headings">LOREM IPSUM</h4>
-            <p class="main-section-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h4 class="main-section-headings">LOREM IPSUM</h4>
-            <p class="main-section-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </li>
-        </ul>
-      </div>
-      <div class="gap50">
-      <div>
-      <h3 class="what-we-do">Czym się zajmujemy</h3>
-      </div>
-      <div>
-      <ul class="what-we-do-presentation">
-        <li>
-          <img src="./images/whatwedoone.jpg" width="370" height="294" alt="projecting and coding at the desk" />
-        </li>
-        <li>
-          <img src="./images/whatwedotwo.jpg" width="370" height="294" alt="projecting and coding for mobile device" />
-        </li>
-        <li>
-          <img src="./images/whatwedothree.jpg" width="370" height="294"
-            alt="projecting and coding with full colour patern" />
-        </li>
-      </ul>
-      </div>
-      </div>
+    <section class="center">
+      <div class="class3 container">
+        <div class="class2">
+          <ul class="main-section">
+            <li>
+              <h4 class="main-section-headings">LOREM IPSUM</h4>
+              <p class="main-section-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h4 class="main-section-headings">LOREM IPSUM</h4>
+              <p class="main-section-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h4 class="main-section-headings">LOREM IPSUM</h4>
+              <p class="main-section-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h4 class="main-section-headings">LOREM IPSUM</h4>
+              <p class="main-section-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="gap50">
+          <div>
+            <h3 class="what-we-do">Czym się zajmujemy</h3>
+          </div>
+          <div>
+            <ul class="what-we-do-presentation">
+              <li>
+                <img src="./images/whatwedoone.jpg" width="370" height="294" alt="projecting and coding at the desk" />
+              </li>
+              <li>
+                <img src="./images/whatwedotwo.jpg" width="370" height="294"
+                  alt="projecting and coding for mobile device" />
+              </li>
+              <li>
+                <img src="./images/whatwedothree.jpg" width="370" height="294"
+                  alt="projecting and coding with full colour patern" />
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
     <section class="main-section-our-team">
       <div class="container gap50">
         <div>
-        <h3 class="main-section-our-team-heading">Nasz zespół</h3>
+          <h3 class="main-section-our-team-heading">Nasz zespół</h3>
         </div>
         <div>
-        <ul class="main-section-our-team-list">
-          <li class="our-team-member-figure">
-            <figure class="no-margin">
-              <img src="./images/productdesigner.jpg" width="270" height="260"
-                alt="personal photo of product designer" />
-              <figcaption class="class5">
-                <h3 class="team-name">John Doe</h3>
-                <p class="team-role">Product Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="our-team-member-figure">
-            <figure class="no-margin">
-              <img src="./images/frontenddeveloper.jpg" width="270" height="260"
-                alt="personal photo of Fronted Developer" />
-              <figcaption class="class5">
-                <h3 class="team-name">John Doe</h3>
-                <p class="team-role">Frontend Developer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="our-team-member-figure">
-            <figure class="no-margin">
-              <img src="./images/marketing.jpg" width="270" height="260"
-                alt="personal photo of Marketing role person" />
-              <figcaption class="class5">
-                <h3 class="team-name">John Doe</h3>
-                <p class="team-role">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="our-team-member-figure">
-            <figure class="no-margin">
-              <img src="./images/uidesigner.jpg" width="270" height="260" alt="personal photo of UI designer" />
-              <figcaption class="class5">
-                <h3 class="team-name">John Doe</h3>
-                <p class="team-role">UI Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
+          <ul class="main-section-our-team-list">
+            <li class="our-team-member-figure">
+              <figure class="no-margin">
+                <img src="./images/productdesigner.jpg" width="270" height="260"
+                  alt="personal photo of product designer" />
+                <figcaption class="class5">
+                  <h3 class="team-name">John Doe</h3>
+                  <p class="team-role">Product Designer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="our-team-member-figure">
+              <figure class="no-margin">
+                <img src="./images/frontenddeveloper.jpg" width="270" height="260"
+                  alt="personal photo of Fronted Developer" />
+                <figcaption class="class5">
+                  <h3 class="team-name">John Doe</h3>
+                  <p class="team-role">Frontend Developer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="our-team-member-figure">
+              <figure class="no-margin">
+                <img src="./images/marketing.jpg" width="270" height="260"
+                  alt="personal photo of Marketing role person" />
+                <figcaption class="class5">
+                  <h3 class="team-name">John Doe</h3>
+                  <p class="team-role">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="our-team-member-figure">
+              <figure class="no-margin">
+                <img src="./images/uidesigner.jpg" width="270" height="260" alt="personal photo of UI designer" />
+                <figcaption class="class5">
+                  <h3 class="team-name">John Doe</h3>
+                  <p class="team-role">UI Designer</p>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
         </div>
-        </div>
+      </div>
     </section>
   </main>
   <footer class="footer">
     <div class="gap20 container">
       <div>
-      <a class="header-logo-blue" href="./index.html"><span>Web</span><span
-          class="header-logo-right-down">Studio</span></a>
+        <a class="header-logo-blue" href="./index.html"><span>Web</span><span
+            class="header-logo-right-down">Studio</span></a>
       </div>
       <div>
-          <address class="class4">
-        <ul class="footer-list">
-          <li class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</li>
-          <li><a class="footer-email" href="mailto:info@example.com">info@example.com</a></li>
-          <li><a class="footer-tel" href="tel:48111111111">+48 111 111 111</a></li>
-        </ul>
-        </div>
+        <address class="class4">
+          <ul class="footer-list">
+            <li class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</li>
+            <li><a class="footer-email" href="mailto:info@example.com">info@example.com</a></li>
+            <li><a class="footer-tel" href="tel:48111111111">+48 111 111 111</a></li>
+          </ul>
+      </div>
       </address>
     </div>
   </footer>
