--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
 </head>
 
 <body>
-  <header class="page-header center">
-    <div class="class1 container">
-      <div class="logo-container">
-        <a class="header-logo-blue" href="./index.html"><span>Web</span><span
-            class="header-logo-right">Studio</span></a>
-      </div>
-      <div class="class6">
+  <header class="page-header">
+    <div class="gap-in-centrum-menu container">
+      <div class="logo-headerlinks-container">
+        <div class="logo-container">
+          <a class="header-logo-blue" href="./index.html"><span>Web</span><span
+              class="header-logo-right">Studio</span></a>
+        </div>
         <nav>
           <div class="header-links-container">
             <a class="header-links" href="agencja.html"><span>Agencja</span></a>
             <a class="header-links" href="./portfolio.html"><span>Portfolio</span></a>
             <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
           </div>
+      </div>
         </nav>
-        <div class="header-links-contact-container">
-          <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-          <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
-        </div>
+      <div class="header-links-contact-container">
+        <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
+        <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
       </div>
     </div>
   </header>
@@ -43,9 +43,9 @@
         <button class="main-button" type="button">Zamów usługe</button>
       </div>
     </section>
-    <section class="center">
-      <div class="class3 container">
-        <div class="class2">
+    <section class="align-items-center">
+      <div class="index-main-section container">
+        <div>
           <ul class="main-section">
             <li>
               <h4 class="main-section-headings">LOREM IPSUM</h4>
@@ -77,7 +77,7 @@
             </li>
           </ul>
         </div>
-        <div class="gap50">
+        <div class="gap-50-px">
           <div>
             <h3 class="what-we-do">Czym się zajmujemy</h3>
           </div>
@@ -100,7 +100,7 @@
       </div>
     </section>
     <section class="main-section-our-team">
-      <div class="container gap50">
+      <div class="container gap-50-px">
         <div>
           <h3 class="main-section-our-team-heading">Nasz zespół</h3>
         </div>
@@ -151,13 +151,13 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="gap20 container">
+    <div class="gap-20-px container">
       <div>
         <a class="header-logo-blue" href="./index.html"><span>Web</span><span
             class="header-logo-right-down">Studio</span></a>
       </div>
       <div>
-        <address class="class4">
+        <address>
           <ul class="footer-list">
             <li class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</li>
             <li><a class="footer-email" href="mailto:info@example.com">info@example.com</a></li>
