--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header class="page-header">
-    <div class="gap-in-centrum-menu container">
+    <div class="freespace-in-centrum-menu container">
       <div class="logo-headerlinks-container">
         <div class="logo-container">
           <a class="header-logo-blue" href="./index.html"><span>Web</span><span
