--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <figure class="no-margin">
                 <img src="./images/productdesigner.jpg" width="270" height="260"
                   alt="personal photo of product designer" />
-                <figcaption class="class5">
+                <figcaption class="figcaption">
                   <h3 class="team-name">John Doe</h3>
                   <p class="team-role">Product Designer</p>
                 </figcaption>
@@ -120,7 +120,7 @@
               <figure class="no-margin">
                 <img src="./images/frontenddeveloper.jpg" width="270" height="260"
                   alt="personal photo of Fronted Developer" />
-                <figcaption class="class5">
+                <figcaption class="figcaption">
                   <h3 class="team-name">John Doe</h3>
                   <p class="team-role">Frontend Developer</p>
                 </figcaption>
@@ -130,7 +130,7 @@
               <figure class="no-margin">
                 <img src="./images/marketing.jpg" width="270" height="260"
                   alt="personal photo of Marketing role person" />
-                <figcaption class="class5">
+                <figcaption class="figcaption">
                   <h3 class="team-name">John Doe</h3>
                   <p class="team-role">Marketing</p>
                 </figcaption>
@@ -139,7 +139,7 @@
             <li class="our-team-member-figure">
               <figure class="no-margin">
                 <img src="./images/uidesigner.jpg" width="270" height="260" alt="personal photo of UI designer" />
-                <figcaption class="class5">
+                <figcaption class="figcaption">
                   <h3 class="team-name">John Doe</h3>
                   <p class="team-role">UI Designer</p>
                 </figcaption>
